// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🧪 BUTTON: style tests: with basic button: should render with correct styles 1`] = `
.emotion-0:link,
.emotion-0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  color: var(--color-primary);
  border: 2px solid var(--color-primary);
}

.emotion-0:link:hover,
.emotion-0:visited:hover,
.emotion-0:link:active,
.emotion-0:visited:active {
  background-color: var(--color-primary);
  color: var(--color-white);
}

<a
  className="emotion-0"
  href="#"
  isFull={false}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
  role="button"
/>
`;

exports[`🧪 BUTTON: style tests: with full button: should render with correct styles 1`] = `
.emotion-0:link,
.emotion-0:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  padding: 10px 30px;
  border-radius: 200px;
  font-weight: 500;
  outline: none;
  -webkit-transition: background-color 500ms;
  transition: background-color 500ms;
  background-color: var(--color-primary);
  color: var(--color-white);
}

.emotion-0:link:hover,
.emotion-0:visited:hover,
.emotion-0:link:active,
.emotion-0:visited:active {
  background-color: var(--color-dark-primary);
}

<a
  className="emotion-0"
  href="#"
  isFull={true}
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
  role="button"
/>
`;
